# acutest

./: .travis.yml  CMakeLists.txt  LICENSE.md  README  README.md  appveyor.yml
.github/workflows/: ci-build.yml
Example-Source/: CMakeLists.txt  c-example.c
Source/: cute.h
examples/: CMakeLists.txt  Makefile  c-example.c  cpp-example.cc  cpp-exception.cc
include/: acutest.h  cutest.h
